# isONclust3

./: .gitignore  AGENTS.md  BENCHMARK_ACCEPTANCE.md  BLOCKERS.md  Cargo.toml  Dockerfile  MILESTONES.md  OPTIMIZATION_EVIDENCE.md  OUTPUT_CONTRACTS.md  PERFORMANCE_DEEP_DIVE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  TODO.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst  project-governance.rst  release-readiness.rst
fixtures/manifests/: medium-ont-cdna.json  phanerognostikon-ont-cdna.json  tiny-ont.json  tiny-pacbio.json
fixtures/output-contracts/: final-clusters-register.json
fixtures/tiny/ont/: PRODUCER.md  annotation.gff3  checksums.sha256  reads.fastq  reference.fasta
fixtures/tiny/pacbio/: PRODUCER.md  annotation.gff3  checksums.sha256  reads.fastq  (+1 more)
schemas/: benchmark-fixture.schema.json  output-contract-register.schema.json
scripts/: check-docker-toy-benchmarks.sh  check-output-contract-fixtures.sh  preflight_artifacts.py  preflight_benchmark_schema.py  preflight_ci.py  preflight_gb10_runner.py  preflight_governance.py  preflight_local_profiling.py  preflight_manifests.py  preflight_optimization_evidence.py  preflight_output_contracts.py  preflight_release_checklist.py  preflight_required_files.py  release-preflight.py  run-gb10-benchmark.sh  run-larger-workload-profiling.sh  run-local-profiling.sh  stage-ena-fastq.sh  stage-gff-assets.sh
src/: clustering.rs  file_actions.rs  generate_sorted_fastq_for_cluster.rs  gff_handling.rs  main.rs  parallelization_side.rs  seeding_and_filtering_seeds.rs  structs.rs  write_output.rs
(+3 files in other folders)
