
[package]
name = "isONclust3"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/sagrudd/isONclust3"
license = "GPL3.0"
description = "Rust implementation of a novel de novo clustering algorithm. isONclust3 is a tool for clustering either PacBio Iso-Seq reads, or Oxford Nanopore reads into clusters, where each cluster represents all reads that came from a gene family. Output is a tsv file with each read assigned to a cluster-ID and a folder 'fastq' containing one fastq file per cluster generated. Detailed information is available in the isONclust3 paper."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1"
bio-seq = "0.10.0"
clap = { version = "4.4.3", features = ["derive", "cargo"] }
clap-cargo = "0.12.0"
rayon = "1.7"
memory-stats = "1.0.0"
rustc-hash = "1.1.0"
minimizer-iter = "1.2.1"
nohash-hasher = "0.2.0"
log = "0.4.27"
simple_logger = "5.0.0"
